--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 	],
 	"autoload" : {
 		"psr-4" : {
-			"pun2006\\yiinicedit" : "src/"
+			"pun2006\\yiinicedit\\" : "src/"
 		}
 	},
 	"minimum-stability" : "stable"
